compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__clause_guards-18.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\npub fn main() {\n  let x = 0\n  case x {\n    _ if 0 < x -> 1\n  }\n}\n"

---
-module(the_app).
-compile(no_auto_import).

-export([main/0]).

-spec main() -> integer().
main() ->
    X = 0,
    case X of
        _@1 when 0 < X ->
            1
    end.

