compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__clause_guards-19.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\npub fn main() {\n  case \"test\" {\n    x if x == \"test\" -> 1\n  }\n}\n"

---
-module(the_app).
-compile(no_auto_import).

-export([main/0]).

-spec main() -> integer().
main() ->
    case <<"test"/utf8>> of
        X when X =:= <<"test"/utf8>> ->
            1
    end.

