compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__clause_guards-22.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\npub fn main() {\n  case 0.1, 1.0 {\n    x, y if x <=. y -> 1\n    _, _ -> 0\n  }\n}\n"

---
-module(the_app).
-compile(no_auto_import).

-export([main/0]).

-spec main() -> integer().
main() ->
    case {0.1, 1.0} of
        {X, Y} when X =< Y ->
            1;

        {_@1, _@2} ->
            0
    end.

